RESOLVED FIXED302622
AVTrackPrivateAVFObjCImpl.mm has incorrect threading assumptions
https://bugs.webkit.org/show_bug.cgi?id=302622
Summary AVTrackPrivateAVFObjCImpl.mm has incorrect threading assumptions
Jean-Yves Avenard [:jya]
Reported 2025-11-16 22:43:16 PST
In 302656@main , incorrect assertions were added (they were supposed to be removed before landing)
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-16 22:43:21 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-11-16 22:47:05 PST
EWS
Comment 3 2025-11-17 19:25:29 PST
Committed 303160@main (fb8d83cd86b7): <https://commits.webkit.org/303160@main> Reviewed commits have been landed. Closing PR #54032 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.