AVTrackPrivateAVFObjCImpl.mm has incorrect threading assumptions https://bugs.webkit.org/show_bug.cgi?id=302622 rdar://164860959

Reviewed by Jer Noble and Eric Carlson.

AVTrackPrivateAVFObjCImpl is created with immutable AVAssetTrack when
using with an AVStreamDataParser ; as such, the code is actually thread-safe.
When used over MSE and following webkit.org/b/302054 where we will move the
SourceBufferPrivate to a dedicated workqueue, those threading assumptions
are no longer valid.
We remove them.

* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
(WebCore::AVTrackPrivateAVFObjCImpl::enabled const):
(WebCore::AVTrackPrivateAVFObjCImpl::setEnabled):
(WebCore::AVTrackPrivateAVFObjCImpl::audioKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::videoKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::textKindForAVAssetTrack):
(WebCore::AVTrackPrivateAVFObjCImpl::textKindForAVMediaSelectionOption):
(WebCore::AVTrackPrivateAVFObjCImpl::textKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::index const):
(WebCore::AVTrackPrivateAVFObjCImpl::id const):
(WebCore::AVTrackPrivateAVFObjCImpl::label const):
(WebCore::AVTrackPrivateAVFObjCImpl::language const):
(WebCore::AVTrackPrivateAVFObjCImpl::languageForAVAssetTrack):
(WebCore::AVTrackPrivateAVFObjCImpl::languageForAVMediaSelectionOption):
(WebCore::formatDescriptionFor):
(WebCore::AVTrackPrivateAVFObjCImpl::width const):
(WebCore::AVTrackPrivateAVFObjCImpl::height const):
(WebCore::AVTrackPrivateAVFObjCImpl::colorSpace const):
(WebCore::AVTrackPrivateAVFObjCImpl::framerate const):
(WebCore::AVTrackPrivateAVFObjCImpl::sampleRate const):
(WebCore::AVTrackPrivateAVFObjCImpl::numberOfChannels const):
(WebCore::AVTrackPrivateAVFObjCImpl::bitrate const):

Canonical link: https://commits.webkit.org/303160@main